--- a/content/docs/card/stars-card.mdx
+++ b/content/docs/card/stars-card.mdx
@@ -1,5 +1,5 @@
 ---
-title: Stars Card
+title: Glowing Background Stars Card
 description: Card background stars that animate on hover and animate anyway
 author: YourTwitterUsername
 ---
@@ -12,20 +12,22 @@ author: YourTwitterUsername
 <Step>Install dependencies</Step>
 
 ```bash
-npm install framer-motion lucide-react
+npm i motion clsx tailwind-merge
 ```
 
-<Step>Update `tailwind.config.js`</Step>
+<Step>Add util file</Step>
 
-Add the following to your tailwind.config.js file.
+lib/utils.ts
+
 
 ```json
-module.exports = {
-  theme: {
-    extend: {
-    }
-  }
+import { ClassValue, clsx } from "clsx";
+import { twMerge } from "tailwind-merge";
+
+export function cn(...inputs: ClassValue[]) {
+  return twMerge(clsx(inputs));
 }
+
 ```
 
 <Step>Run the following command</Step>
@@ -46,8 +48,3 @@ Open the newly created file and paste the following code:
 </Steps>
 
 
-## Credits
-
-   Built by [Your name](https://github.com/YourGithubUsername)
-
-   ...Add appropriate credits here.
